admission/validatingAdmissionPolicies/policies/startupprobe-httpget-host/initcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    pss.security.kolteq.com/warn: 'baseline-restricted'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    pss.security.kolteq.com/audit: 'baseline-restricted'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    security.kolteq.com/audit: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    security.kolteq.com/enforce: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: startupprobe-httpget-host-initcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: ed98fd19-0e62-55e8-b64a-ec413f01be61
  labels:
    startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    startupprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false-true'
    startupprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false-true'
spec:
  policyName: startupprobe-httpget-host-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: startupprobe-httpget-host-initcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
